--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -61,7 +61,7 @@ main {
     height: 600px;
     border: 2px solid #555;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
     padding: 20px;
 }
 
@@ -70,6 +70,7 @@ main {
     max-height: 60%;
     height: auto;
     margin-bottom: 20px;
+    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
 }
 
 #scene-text {
@@ -78,6 +79,30 @@ main {
     color: #ddd;
     white-space: pre-wrap;
     text-align: center;
+    height: calc(40% - 20px); /* Minus 20px for the margin-bottom of the image */
+    overflow-y: auto;
+    padding: 5px;
+}
+
+/* For WebKit-based browsers (e.g., Chrome, Safari) */
+#scene-text::-webkit-scrollbar {
+    width: 8px;
+    background-color: #333;
+}
+
+#scene-text::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #555;
+}
+
+#scene-text::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+}
+
+/* For Firefox */
+#scene-text {
+    scrollbar-width: thin;
+    scrollbar-color: #555 #333;
 }
 
 #input-container {
