--- a/The Book - Web/templates/home.html
+++ b/The Book - Web/templates/home.html
@@ -20,8 +20,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="/admin/data/clean">Admin: Clean up firestore</a></li>
             </ul>
         </nav>
     </header>
