--- a/The Book - Web/templates/io.html
+++ b/The Book - Web/templates/io.html
@@ -1,6 +1,6 @@
 <div id="content">
-    <img id="scene-image" src="" alt="Scene" />
-    <div id="scene-text"></div>
+    <img id="scene-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
+    <div id="scene-text">Who dares reading The Book?</div>
 </div>
 
 <div id="input-container" style="display:none;">
