--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -38,19 +38,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-}
-
-#unity-container {
-    width: 80%;
-    height: 600px;
-    border: 2px solid #555;
-    position: relative;
-}
-
-#unity-canvas {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 #content {
@@ -58,11 +46,19 @@ main {
     flex-direction: column;
     align-items: center;
     width: 80%;
-    height: 600px;
+    height: calc(100vh - 10%);
     border: 2px solid #555;
     position: relative;
-    overflow: hidden;
     padding: 20px;
+}
+
+#input-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;
+    height: 10%;
 }
 
 #scene-image {
@@ -79,9 +75,13 @@ main {
     color: #ddd;
     white-space: pre-wrap;
     text-align: center;
-    height: calc(40% - 20px); /* Minus 20px for the margin-bottom of the image */
+    height: calc(20% - 20px); /* Minus 20px for the margin-bottom of the image */
     overflow-y: auto;
     padding: 5px;
+
+    /* For Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: #555 #333;
 }
 
 /* For WebKit-based browsers (e.g., Chrome, Safari) */
@@ -99,19 +99,38 @@ main {
     background-color: #666;
 }
 
-/* For Firefox */
-#scene-text {
+#scene-chat {
+    font-family: 'Courier', monospace;
+    font-size: 15px;
+    color: #ddd;
+    white-space: pre-wrap;
+    text-align: left;
+    width: 100%;
+    height: calc(75% - 20px); /* Minus 20px for the margin-bottom of the image */
+    overflow-y: auto;
+    border: 2px solid #555;
+    margin-top: 10px;
+
+    /* For Firefox */
     scrollbar-width: thin;
     scrollbar-color: #555 #333;
 }
 
-#input-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    width: 100%;
+/* For WebKit-based browsers (e.g., Chrome, Safari) */
+#scene-chat::-webkit-scrollbar {
+    width: 8px;
+    background-color: #333;
 }
+
+#scene-chat::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #555;
+}
+
+#scene-chat::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+}
+  
 
 #user-input {
     flex-grow: 1;
