--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -75,7 +75,7 @@ main {
     color: #ddd;
     white-space: pre-wrap;
     text-align: center;
-    height: calc(20% - 20px); /* Minus 20px for the margin-bottom of the image */
+    height: calc(100% - 20px); /* Minus 20px for the margin-bottom of the image */
     overflow-y: auto;
     padding: 5px;
 
@@ -99,38 +99,19 @@ main {
     background-color: #666;
 }
 
-#scene-chat {
+dialog {
+    display: inline;
     font-family: 'Courier', monospace;
-    font-size: 15px;
-    color: #ddd;
-    white-space: pre-wrap;
-    text-align: left;
-    width: 100%;
-    height: calc(75% - 20px); /* Minus 20px for the margin-bottom of the image */
-    overflow-y: auto;
-    border: 2px solid #555;
-    margin-top: 10px;
-
-    /* For Firefox */
-    scrollbar-width: thin;
-    scrollbar-color: #555 #333;
+    font-size: 18px;
+    color: #004f00;
 }
 
-/* For WebKit-based browsers (e.g., Chrome, Safari) */
-#scene-chat::-webkit-scrollbar {
-    width: 8px;
-    background-color: #333;
+narrative {
+    display: inline;
+    font-family: 'Courier', monospace;
+    font-size: 18px;
+    color: #5a7201;
 }
-
-#scene-chat::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: #555;
-}
-
-#scene-chat::-webkit-scrollbar-thumb:hover {
-    background-color: #666;
-}
-  
 
 #user-input {
     flex-grow: 1;
