--- a/The Book - Web/templates/io.html
+++ b/The Book - Web/templates/io.html
@@ -1,24 +1,9 @@
 <div id="content">
     <img id="scene-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
     <div id="scene-text">Who dares reading The Book?</div>
-    <div id="scene-chat">
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-        DumDum2000: Blah blah blah<br>
-        Banana369: Blah blah blah, buh nsdfsdfs !<br>
-    </div>
+    <!-- <div id="scene-chat">
+
+    </div> -->
 </div>
 
 <div id="input-container" style="display:none;">
