--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -135,3 +135,42 @@ narrative {
 #submit-input:hover {
     background-color: #666;
 }
+
+/* Icons */
+#icon-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px;
+}
+
+#icon-container i {
+    font-size: 24px;
+    color: #ddd;
+    cursor: pointer;
+}
+
+#icon-container i:hover {
+    color: #aaa;
+}
+
+/* Modals */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #333;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #555;
+    width: 80%;
+    color: #ddd;
+}
