Character Creation (missing the bridge to book experience)

--- a/The Book - Web/templates/io.html
+++ b/The Book - Web/templates/io.html
@@ -7,7 +7,11 @@
         by Enoch
     </div>
     <div id="scene-text">
-        State your name, Reader.
+        ...
+    </div>
+    <div id="scene-answer-images">
+    </div>
+    <div id="scene-answer-quick-replies">
     </div>
     <div id="loading-spinner" class="spinner">
         <div class="circle"></div>
