--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -133,6 +133,60 @@ narrative {
     background-color: transparent;
     border: none;
 }
+/* Visual Replies */
+
+#scene-answer-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+#scene-answer-images img {
+    max-width: 30%;
+    max-height: 100px;
+    height: auto;
+    cursor: pointer;
+    border: 2px solid #555;
+    border-radius: 5px;
+    transition: 0.3s;
+    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
+}
+
+#scene-answer-images img:hover {
+    border-color: #666;
+    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.8), 0 1px 3px rgba(132, 119, 119, 0.1);
+}
+
+/* Quick Replies */
+
+#scene-answer-quick-replies {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.quick-reply {
+    padding: 10px 20px;
+    background-color: #555;
+    color: #ddd;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Courier', monospace;
+    font-size: 18px;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.quick-reply:hover {
+    background-color: #666;
+}
 
 .spinner {
     display: none;
