Style spinner & answer cards

--- a/The Book - Web/templates/io.html
+++ b/The Book - Web/templates/io.html
@@ -6,15 +6,17 @@
     <div id="scene-daemon-name">
         by Enoch
     </div>
-    <div id="scene-text">
-        ...
-    </div>
-    <div id="scene-answer-images">
-    </div>
-    <div id="scene-answer-quick-replies">
-    </div>
-    <div id="loading-spinner" class="spinner">
-        <div class="circle"></div>
+    <div id="scene-text-container">
+        <div id="scene-text">
+            ...
+        </div>
+        <div id="scene-answer-images">
+        </div>
+        <div id="scene-answer-quick-replies">
+        </div>
+        <div id="loading-spinner" class="spinner">
+            <div class="circle"></div>
+        </div>
     </div>
 </div>
 
