--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -63,7 +63,7 @@ main {
 
 #scene-image {
     max-width: 100%;
-    max-height: 60%;
+    max-height: 40%;
     height: auto;
     margin-bottom: 20px;
     box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
@@ -86,6 +86,16 @@ main {
     text-align: center;
     margin-bottom: 20px;
 }
+
+#scene-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
 #scene-text {
     font-family: 'Courier', monospace;
     font-size: 20px;
@@ -137,16 +147,17 @@ narrative {
 
 #scene-answer-images {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 #scene-answer-images img {
-    max-width: 30%;
-    max-height: 100px;
+    flex: 1; /* Add this to make the images take up equal space within the container */
+    max-width: calc(33% - 10px);
     height: auto;
     cursor: pointer;
     border: 2px solid #555;
@@ -188,8 +199,10 @@ narrative {
     background-color: #666;
 }
 
+
 .spinner {
     display: none;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
