--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -286,6 +286,12 @@ narrative {
     color: #ddd;
 }
 
+.character-section {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
 .icon-image {
     width: 40px;
     height: 40px;
@@ -308,8 +314,16 @@ narrative {
 }
 
 .portrait-image {
-    width: 48px;
-    height: 64px;
+    width: 96px;
+    height: 128px;
     margin-right: 10px;
     vertical-align: middle;
+}
+
+h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #aaa;
+    text-decoration: underline;
+    font-weight: bold;
 }
