--- a/The Book - Web/templates/modals/character_sheet_modal.html
+++ b/The Book - Web/templates/modals/character_sheet_modal.html
@@ -1,14 +1,30 @@
 <div class="modal-content">
     <h2>Character Sheet</h2>
-    <img id="character-portrait" class="icon-image" src="path/to/portrait.png" alt="Character Portrait" />
-    <p>Name: <span id="character-name">John Doe</span></p>
-    <p>Description: <span id="character-description">A really average human.</span></p>
-    <p>Level: <span id="character-level">1</span></p>
-    <p>Experience: <span id="character-experience">0</span> / <span id="character-next-level">100</span></p>
-    <p>Health: <span id="character-health">100</span> / <span id="character-max-health">100</span></p>
-    <p>Strength: <span id="character-strength">10</span></p>
-    <p>Agility: <span id="character-agility">10</span></p>
-    <p>Intelligence: <span id="character-intelligence">10</span></p>
+    <div class="character-section">
+        <img id="character-portrait" class="portrait-image" src="{{ url_for('static', filename='/images/book_icon.png') }}" alt="Character Portrait" />
+        <div>
+            <p>Name: <span id="character-name">John Doe</span></p>
+            <div id="character-stats">
+                <p>Level:<span id="character-level">1</span></p>
+                <p>Experience: <span id="character-experience">0</span> / <span id="character-next-level">100</span></p>
+            
+                <p>Strength: <span id="character-stats-strength">10</span></p>
+                <p>Agility: <span id="character-stats-agility">10</span></p>
+                <p>Intelligence: <span id="character-stats-intelligence">10</span></p>
+            </div>
+        </div>
+    </div>
+    <div id="character-background">
+        <h3>Background</h3>
+        <h4>Description:</h4>
+        <span id="character-description">A really average human.</span>
+        <h4>Occupation:</h4>
+        <span id="character-occupation">Gamer</span>
+        <h4>Psychology:</h4>
+        <span id="character-psychology">Very basic.</span>
+        <h4>Backstory:</h4>
+        <span id="character-backstory">Born in France.</span>
+    </div>
 </div>
 
 <script>
@@ -16,13 +32,16 @@ function updateCharSheetModalContent(character) {
     document.getElementById("character-portrait").src = character.image_url;
     document.getElementById("character-name").innerHTML = character.name;
     document.getElementById("character-description").innerHTML = character.description;
+    document.getElementById("character-occupation").innerHTML = character.occupation;
+    document.getElementById("character-psychology").innerHTML = character.psychology;
+    document.getElementById("character-backstory").innerHTML = character.backstory;
+
     document.getElementById("character-level").innerHTML = character.level;
     document.getElementById("character-experience").innerHTML = character.experience;
     document.getElementById("character-next-level").innerHTML = character.next_level;
-    document.getElementById("character-health").innerHTML = character.health;
-    document.getElementById("character-max-health").innerHTML = character.max_health;
-    document.getElementById("character-strength").innerHTML = character.strength;
-    document.getElementById("character-agility").innerHTML = character.agility;
-    document.getElementById("character-intelligence").innerHTML = character.intelligence;    
+
+    document.getElementById("character-stats-strength").innerHTML = character.stats.strength;
+    document.getElementById("character-stats-agility").innerHTML = character.stats.agility;
+    document.getElementById("character-stats-intelligence").innerHTML = character.stats.intelligence;    
 }
 </script>
