--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -193,10 +193,30 @@ narrative {
     font-size: 18px;
     text-align: center;
     transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
+}
+
+.quick-reply:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+    transition: all 0.7s;
 }
 
 .quick-reply:hover {
-    background-color: #666;
+    background-color: #777;
+    color: #fff;
+    transform: translateY(-2px);
+}
+
+.quick-reply:hover:before {
+    left: 100%;
 }
 
 
@@ -286,10 +306,15 @@ narrative {
     color: #ddd;
 }
 
+.modal-content h2 {
+    text-align: center;
+}
+
 .character-section {
     display: flex;
     align-items: flex-start;
     margin-bottom: 20px;
+    justify-content: space-between;
 }
 
 .icon-image {
