--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -1,3 +1,8 @@
+@import url('scrollbars.css');
+@import url('main-header.css');
+@import url('main-content.css');
+@import url('modals.css');
+
 * {
     margin: 0;
     padding: 0;
@@ -10,345 +15,12 @@ body {
     color: #ddd;
 }
 
-header {
-    background-color: #111;
-    padding: 10px;
-}
-
-nav ul {
-    display: flex;
-    justify-content: flex-end;
-    list-style-type: none;
-}
-
-nav ul li {
-    margin-left: 20px;
-}
-
-nav ul li a {
-    color: #ddd;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    color: #aaa;
-}
-
+/*Main contains 3 sections: main-header main-content main-footer (and modals)*/
 main {
-    display: flex;
+    display: grid;
+    grid-template-rows: 50px 1fr 50px;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-}
-
-#content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-    height: calc(100vh - 10%);
-    border: 2px solid #555;
     position: relative;
-    padding: 20px;
-}
-
-#input-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    width: 100%;
-    height: 10%;
-}
-
-#scene-image {
-    max-width: 100%;
-    max-height: 40%;
-    height: auto;
-    margin-bottom: 20px;
-    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
-}
-
-#scene-title {
-    font-family: 'Courier', monospace;
-    font-size: 24px;
-    color: #ddd;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-#scene-daemon-name {
-    font-family: 'Courier', monospace;
-    font-size: 20px;
-    color: #ddd;
-    font-style: italic;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#scene-text-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-#scene-text {
-    font-family: 'Courier', monospace;
-    font-size: 20px;
-    color: #ddd;
-    white-space: pre-wrap;
-    text-align: center;
-    height: calc(100% - 20px); /* Minus 20px for the margin-bottom of the image */
-    overflow-y: auto;
-    padding: 5px;
-
-    /* For Firefox */
-    scrollbar-width: thin;
-    scrollbar-color: #555 #333;
-}
-
-/* For WebKit-based browsers (e.g., Chrome, Safari) */
-#scene-text::-webkit-scrollbar {
-    width: 8px;
-    background-color: #333;
-}
-
-#scene-text::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: #555;
-}
-
-#scene-text::-webkit-scrollbar-thumb:hover {
-    background-color: #666;
-}
-
-dialog {
-    display: inline;
-    font-family: 'Courier', monospace;
-    font-size: 18px;
-    color: #004f00;
-    background-color: transparent;
-    border: none;
-}
-
-narrative {
-    display: inline;
-    font-family: 'Courier', monospace;
-    font-size: 18px;
-    color: #5a7201;
-    background-color: transparent;
-    border: none;
-}
-/* Visual Replies */
-
-#scene-answer-images {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-}
-
-#scene-answer-images img {
-    flex: 1; /* Add this to make the images take up equal space within the container */
-    max-width: calc(33% - 10px);
-    height: auto;
-    cursor: pointer;
-    border: 2px solid #555;
-    border-radius: 5px;
-    transition: 0.3s;
-    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
-}
-
-#scene-answer-images img:hover {
-    border-color: #666;
-    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.8), 0 1px 3px rgba(132, 119, 119, 0.1);
-}
-
-/* Quick Replies */
-
-#scene-answer-quick-replies {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-
-.quick-reply {
-    padding: 10px 20px;
-    background-color: #555;
-    color: #ddd;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-family: 'Courier', monospace;
-    font-size: 18px;
-    text-align: center;
-    transition: 0.3s;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0 4px 6px rgba(105, 84, 84, 0.685), 0 1px 3px rgba(132, 119, 119, 0.08);
-}
-
-.quick-reply:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.1), transparent);
-    transition: all 0.7s;
-}
-
-.quick-reply:hover {
-    background-color: #777;
-    color: #fff;
-    transform: translateY(-2px);
-}
-
-.quick-reply:hover:before {
-    left: 100%;
-}
-
-
-.spinner {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 999;
-}
-
-.spinner .circle {
-    border: 5px solid rgba(0, 0, 0, 0.1);
-    border-top-color: #555;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-#user-input {
-    flex-grow: 1;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #555;
-    background-color: #333;
-    color: #ddd;
-    margin-right: 10px;
-}
-
-#submit-input {
-    padding: 10px 20px;
-    background-color: #555;
-    color: #ddd;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#submit-input:hover {
-    background-color: #666;
-}
-
-/* Icons */
-#icon-container {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 10px;
-}
-
-#icon-container i {
-    font-size: 24px;
-    color: #ddd;
-    cursor: pointer;
-}
-
-#icon-container i:hover {
-    color: #aaa;
-}
-
-/* Modals */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-    background-color: #333;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #555;
-    width: 80%;
-    color: #ddd;
-}
-
-.modal-content h2 {
-    text-align: center;
-}
-
-.character-section {
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 20px;
-    justify-content: space-between;
-}
-
-.icon-image {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
-.inventory-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-}
-
-.item-description {
-    font-size: 14px;
-    color: #ccc;
-    margin-top: 4px;
-    margin-left: 5px;
-    margin-bottom: 8px;
-}
-
-.portrait-image {
-    width: 96px;
-    height: 128px;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
-h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #aaa;
-    text-decoration: underline;
-    font-weight: bold;
 }
