--- a/The Book - Web/templates/io.html
+++ b/The Book - Web/templates/io.html
@@ -1,30 +1,35 @@
-<div id="content">
-    <img id="scene-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
-    <div id="scene-title">
+<div id="scene-header">
+    <img id="scene-header-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
+    <div id="scene-header-title">
         The Book
     </div>    
-    <div id="scene-daemon-name">
+    <div id="scene-header-daemon-name">
         by Enoch
-    </div>
-    <div id="scene-text-container">
-        <div id="scene-text">
-            ...
-        </div>
-        <div id="scene-answer-images">
-        </div>
-        <div id="scene-answer-quick-replies">
-        </div>
-        <div id="loading-spinner" class="spinner">
-            <div class="circle"></div>
-        </div>
     </div>
 </div>
 
-<div id="input-container" style="display:none;">
-    <form id="user-input-form">
-        <input type="text" id="user-input" placeholder="Enter your command...">
-        <button id="submit-input" type="submit">Submit</button>
-    </form>
+<div id="scene-interactive-content" class="custom-scrollbar">
+    <div id="loading-spinner" class="spinner">
+        <div class="circle"></div>
+    </div>
+
+    <div id="scene-text" class="custom-scrollbar">
+        ...
+    </div>
+
+    <div id="scene-input" style="display:none;" class="custom-scrollbar">
+
+        <div id="scene-answer-images">
+        </div>
+
+        <div id="scene-answer-quick-replies">
+        </div>
+
+        <form id="user-input-form">
+            <input type="text" id="user-input" placeholder="Enter your command...">
+            <button id="submit-input" type="submit">Submit</button>
+        </form>
+    </div>
 </div>
 
 <script type="module" src="{{ url_for('static', filename='js/io.js') }}"></script>
