--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -2,6 +2,7 @@
 @import url('main-header.css');
 @import url('main-content.css');
 @import url('modals.css');
+@import url('effects.css');
 
 * {
     margin: 0;
