--- a/The Book - Web/templates/home.html
+++ b/The Book - Web/templates/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/main.css') }}" />
 
     <script type="module" src="{{ url_for('static', filename='js/firebase.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/effects.js') }}"></script>
 
     <title>The Book</title>
 </head>
