--- a/The Book - Web/static/style/style.css
+++ b/The Book - Web/static/style/style.css
@@ -1,6 +1,7 @@
 @import url('scrollbars.css');
 @import url('main-header.css');
 @import url('main-content.css');
+@import url('main-login.css');
 @import url('modals.css');
 @import url('effects.css');
 
