wip suggestion of commands on @

--- a/The Book - Web/templates/home.html
+++ b/The Book - Web/templates/home.html
@@ -71,8 +71,8 @@
             
                     <div id="scene-answer-quick-replies">
                     </div>
-            
                     <form id="user-input-form">
+                        <div id="autocomplete-suggestions" class="suggestions"></div>
                         <input type="text" id="user-input" placeholder="Enter your command...">
                         <button id="submit-input" type="submit">Submit</button>
                     </form>
