--- a/The Book - Web/static/style/main-content.css
+++ b/The Book - Web/static/style/main-content.css
@@ -200,6 +200,25 @@ scene-interactive-content contains two sections scene-text scene-input*/
     background-color: #666;
 }
 
+.suggestions {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    z-index: 1000;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.suggestion-item {
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.suggestion-item:hover {
+    background-color: #e9e9e9;
+}
+
 @keyframes fadeIn {
 0% {
     opacity: 0;
