--- a/The Book - Web/static/style/the_book/style.css
+++ b/The Book - Web/static/style/the_book/style.css
@@ -5,24 +5,20 @@
 @import url('modals.css');
 @import url('effects.css');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
+/*my_app contains 3 sections: main-header main-content main-footer (and modals)*/
+my_app {
     font-family: 'IM Fell English', serif;
     background-color: #222;
     color: #ddd;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
-/*Main contains 3 sections: main-header main-content main-footer (and modals)*/
-main {
     display: grid;
     grid-template-rows: 50px 1fr 50px;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     position: relative;
 }
