--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ghostless Shell</title>
+    <title>Ghostless Shell: {% block title %}Home{% endblock %}</title>
+
+    {% block headers %} {% endblock %}
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/main_frame.css') }}">
@@ -13,7 +15,7 @@
         <nav class="nav-drawer">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/the-book">The Book</a></li>
+                <li><a href="/the_book">The Book</a></li>
                 <li><a href="/persona">Persona</a></li>
                 <li><a href="/chatgpteam">ChatGPTeam</a></li>
             </ul>
@@ -21,7 +23,9 @@
         <button class="toggle-button"><i class="fas fa-chevron-up"></i></button>
     </header>
     <main>
-        <!-- Add your main content here -->
+        {% block content %}
+
+        {% endblock %}
     </main>
     <footer>
         <button class="toggle-button"><i class="fas fa-chevron-down"></i></button>
