--- a/The Book - Web/templates/the_book/home.html
+++ b/The Book - Web/templates/the_book/home.html
@@ -1,112 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "main_frame.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
-    
-    <link rel="shortcut icon" href="{{ url_for('static', filename='/images/book_icon.png') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/main.css') }}" />
+{% block title %}The Book{% endblock %}
 
-    <script type="module" src="{{ url_for('static', filename='js/firebase.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/effects.js') }}"></script>
+{% block headers %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
 
-    <script type="module" src="{{ url_for('static', filename='js/login.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/modals.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/io.js') }}"></script>
-    
-    <title>The Book</title>
-</head>
+<link rel="shortcut icon" href="{{ url_for('static', filename='/images/book_icon.png') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='style/the_book/style.css') }}" />
 
-<body>    
-    <main class="custom-scrollbar">
-        
-        <div id="main-header" class="custom-scrollbar">
-            <ul>
-                <li>
-                    <form id="logout-form" style="display:none;">
-                        <label id="logout-form-user-email"></label>
-                        <button type="submit">Log out</button>
-                    </form>
-                </li>
-                <li><a href="/admin/data/clean">Admin: Clean up firestore</a></li>
-                <li><a href="/admin/data/populate_world">Admin: populate world</a></li>
-            </ul>
-        </div>
+<script type="module" src="{{ url_for('static', filename='js/the_book/firebase.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/the_book/effects.js') }}"></script>
 
-        <div id="main-content" class="custom-scrollbar">
-            <div id="scene-header">
-                <img id="scene-header-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
-                <div id="scene-header-title">
-                    The Book
-                </div>    
-                <div id="scene-header-daemon-name">
-                    by Enoch
-                </div>
-            </div>
-            
-            <div id="scene-interactive-content" class="custom-scrollbar">
-                <form id="login-form">
-                    <p>State your credentials, adventurer. If they don't exist, they'll be created.</p>
-                    <input type="email" id="email" placeholder="Email" />
-                    <input type="password" id="password" placeholder="Password" />
-                    <button type="submit">Login</button>
+<script type="module" src="{{ url_for('static', filename='js/the_book/login.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/the_book/modals.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/the_book/io.js') }}"></script>
+{% endblock %}
+
+{% block content %}
+<my_app class="custom-scrollbar">
+    <div id="main-header" class="custom-scrollbar">
+        <ul>
+            <li>
+                <form id="logout-form" style="display:none;">
+                    <label id="logout-form-user-email"></label>
+                    <button type="submit">Log out</button>
                 </form>
-                
-                <div id="loading-spinner" class="spinner">
-                    <div class="circle"></div>
-                </div>
-            
-                <div id="scene-text" class="custom-scrollbar">
-                </div>
-            
-                <div id="scene-input" style="display:none;" class="custom-scrollbar">
-            
-                    <div id="scene-answer-images">
-                    </div>
-            
-                    <div id="scene-answer-quick-replies">
-                    </div>
-                    <form id="user-input-form">
-                        <div id="autocomplete-suggestions" class="suggestions"></div>
-                        <input type="text" id="user-input" placeholder="Enter your command...">
-                        <button id="submit-input" type="submit">Submit</button>
-                    </form>
-                </div>
+            </li>
+            <li><a href="/admin/data/clean">Admin: Clean up firestore</a></li>
+            <li><a href="/admin/data/populate_world">Admin: populate world</a></li>
+        </ul>
+    </div>
+
+    <div id="main-content" class="custom-scrollbar">
+        <div id="scene-header">
+            <img id="scene-header-image" src="{{ url_for('static', filename='images/welcome_book.png') }}" alt="Scene" />
+            <div id="scene-header-title">
+                The Book
+            </div>    
+            <div id="scene-header-daemon-name">
+                by Enoch
             </div>
         </div>
-
-        <div id="main-footer">
-            <!-- Icons -->
-            <div id="icon-container" style="display: none;">
-                <i class="fas fa-compass" id="teleport-icon"></i>
-                <i class="fas fa-user" id="character-sheet-icon"></i>
-                <i class="fas fa-suitcase" id="inventory-icon"></i>
-                <i class="fas fa-scroll" id="quests-icon"></i>
+        
+        <div id="scene-interactive-content" class="custom-scrollbar">
+            <form id="login-form">
+                <p>State your credentials, adventurer. If they don't exist, they'll be created.</p>
+                <input type="email" id="email" placeholder="Email" />
+                <input type="password" id="password" placeholder="Password" />
+                <button type="submit">Login</button>
+            </form>
+            
+            <div id="loading-spinner" class="spinner">
+                <div class="circle"></div>
             </div>
-
-            <!-- Modals -->
-            <div id="teleport-modal" class="modal">
-                {% include 'modals/teleport_modal.html' %}
+        
+            <div id="scene-text" class="custom-scrollbar">
             </div>
-
-            <div id="character-sheet-modal" class="modal">
-                {% include 'modals/character_sheet_modal.html' %}
-            </div>
-
-            <div id="inventory-modal" class="modal">
-                {% include 'modals/inventory_modal.html' %}
-            </div>
-
-            <div id="quests-modal" class="modal">
-                {% include 'modals/quests_modal.html' %}
+        
+            <div id="scene-input" style="display:none;" class="custom-scrollbar">
+        
+                <div id="scene-answer-images">
+                </div>
+        
+                <div id="scene-answer-quick-replies">
+                </div>
+                <form id="user-input-form">
+                    <div id="autocomplete-suggestions" class="suggestions"></div>
+                    <input type="text" id="user-input" placeholder="Enter your command...">
+                    <button id="submit-input" type="submit">Submit</button>
+                </form>
             </div>
         </div>
-    </main>
-</body>
+    </div>
 
-</html>
+    <div id="main-footer">
+        <!-- Icons -->
+        <div id="icon-container" style="display: none;">
+            <i class="fas fa-compass" id="teleport-icon"></i>
+            <i class="fas fa-user" id="character-sheet-icon"></i>
+            <i class="fas fa-suitcase" id="inventory-icon"></i>
+            <i class="fas fa-scroll" id="quests-icon"></i>
+        </div>
+
+        <!-- Modals -->
+        <div id="teleport-modal" class="modal">
+            {% include 'the_book/modals/teleport_modal.html' %}
+        </div>
+
+        <div id="character-sheet-modal" class="modal">
+            {% include 'the_book/modals/character_sheet_modal.html' %}
+        </div>
+
+        <div id="inventory-modal" class="modal">
+            {% include 'the_book/modals/inventory_modal.html' %}
+        </div>
+
+        <div id="quests-modal" class="modal">
+            {% include 'the_book/modals/quests_modal.html' %}
+        </div>
+    </div>
+</my_app>
+{% endblock %}
