--- a/The Book - Web/static/style/main_frame.css
+++ b/The Book - Web/static/style/main_frame.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 body {
     margin: 0;
     padding: 0;
@@ -6,6 +7,7 @@ body {
     height: 100vh;
     width: 100vw;
     transition: grid-template-rows 0.3s;
+    background-color: #0F1B0F;
 }
 
 body.collapsed-header {
@@ -21,7 +23,8 @@ body.collapsed-both {
 }
 
 header, footer {
-    background-color: #333;
+    background-color: #111;
+    font-family: 'Orbitron', sans-serif;
     color: white;
     text-align: center;
     position: relative;
@@ -29,10 +32,19 @@ header, footer {
 }
 
 main {
-    background-color: #f0f0f0;
+    background-color: #0F4B0F;
+    font-family: 'Orbitron', sans-serif;
     overflow: auto;
     position: relative;
     z-index: 5;
+}
+
+main a {
+    color: #52ca52;
+}
+
+main a:visited {
+    color: #22bb22;
 }
 
 header .toggle-button, footer .toggle-button {
@@ -58,10 +70,11 @@ footer .toggle-button {
 }
 
 header .toggle-button:hover, footer .toggle-button:hover {
-    background-color: #555;
+    background-color: #0F4B0F;
 }
 
 .nav-drawer, .footer-drawer {
+    font-family: 'Orbitron', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,9 +109,10 @@ header .toggle-button:hover, footer .toggle-button:hover {
 }
 
 .nav-drawer a:hover, .footer-drawer a:hover {
-    background-color: #555;
+    background-color: #0F4B0F;
 }
 
 .toggle-button i {
     font-size: 18px;
 }
+
