--- a/The Book - Web/templates/home/home.html
+++ b/The Book - Web/templates/home/home.html
@@ -2,9 +2,15 @@
 
 {% block title %}Home{% endblock %}
 
-{% block headers %} {% endblock %}
+{% block headers %}
+<link rel="stylesheet" href="{{ url_for('static', filename='style/home/home.css') }}" />
+{% endblock %}
 
 {% block content %}
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the home page content.</p>
+<main class="content-main">
+    <h1>Welcome, Ghostless Shell</h1>
+    <p>This place hold the results of my digital explorations.</p>
+    <p>Please, explore to your soul content. You may want to get lost in a book, or talk to the creatures who dwelve here.</p>
+    <p>Whatever you do, remember you are a guest in their territory. While you probe the theory of mind of those agents and cogs, do question your own.</p>
+</main>
 {% endblock %}
