--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghostless Shell: {% block title %}Home{% endblock %}</title>
-
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+    <script>function getCSRFToken() {return document.querySelector('meta[name="csrf-token"]').getAttribute('content');}</script>
     {% block headers %} {% endblock %}
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -16,7 +17,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/the_book">The Book</a></li>
-                <li><a href="/persona">Persona</a></li>
+                <li><a href="/persona/cassandra/stephane/">Persona (Cassandra)</a></li>
                 <li><a href="/chatgpteam">ChatGPTeam</a></li>
             </ul>
         </nav>
