Some styling + coffee link

--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -33,7 +33,7 @@
         <div class="footer-drawer">
             <ul>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/coffee">Buy me a coffee</a></li>
+                <li><a href="https://www.buymeacoffee.com/myl1ne">Buy me a coffee</a></li>
             </ul>
         </div>
     </footer>
