--- a/The Book - Web/static/style/the_book/modals.css
+++ b/The Book - Web/static/style/the_book/modals.css
@@ -1,7 +1,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     left: 0;
     top: 0;
     width: 100%;
@@ -14,8 +14,11 @@
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #555;
-    width: 80%;
+    width: 50%;
+    max-height: 30%;
+    top: 50%;
     color: #ddd;
+    z-index: 999;
 }
 
 .modal-content h2 {
