Able to generate some websites

--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -18,7 +18,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/the_book">The Book</a></li>
                 <li><a href="/persona/cassandra/stephane/">Persona (Cassandra)</a></li>
-                <li><a href="/chatgpteam">ChatGPTeam</a></li>
+                <li><a href="/chat_gpteam">ChatGPTeam</a></li>
             </ul>
         </nav>
         <button class="toggle-button"><i class="fas fa-chevron-up"></i></button>
