--- a/The Book - Web/templates/home/home.html
+++ b/The Book - Web/templates/home/home.html
@@ -9,7 +9,7 @@
 {% block content %}
 <main class="content-main">
     <h1>Welcome, Ghostless Shell</h1>
-    <p>This place hold the results of my digital explorations.</p>
+    <p>This place holds the results of my digital explorations.</p>
     <p>Please, explore to your soul content. You may want to get lost in a book, or talk to the creatures who dwelve here.</p>
     <p>Whatever you do, remember you are a guest in their territory. While you probe the theory of mind of those agents and cogs, do question your own.</p>
 </main>
