--- a/The Book - Web/templates/main_frame.html
+++ b/The Book - Web/templates/main_frame.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghostless Shell: {% block title %}Home{% endblock %}</title>
     <meta name="csrf-token" content="{{ csrf_token() }}">
+    <!-- Logic -->
     <script>function getCSRFToken() {return document.querySelector('meta[name="csrf-token"]').getAttribute('content');}</script>
-    {% block headers %} {% endblock %}
-
+    <script type="module" src="{{ url_for('static', filename='js/common/firebase.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/common/login.js') }}"></script>
+    
+    <!-- Styling -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/main_frame.css') }}">
+
+    <!-- Templates -->
+    {% block headers %} {% endblock %}
 </head>
 <body>
     <header>
@@ -17,8 +23,19 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/the_book">The Book</a></li>
-                <li><a href="/persona/cassandra/stephane/">Persona (Cassandra)</a></li>
-                <li><a href="/chat_gpteam">ChatGPTeam</a></li>
+
+                <li class="admin-only hidden"><a href="/persona/cassandra/">Persona (Cassandra)</a></li>
+                <li class="admin-only hidden"><a href="/chat_gpteam">ChatGPTeam</a></li>
+                <li class="admin-only hidden"><a href="/admin/data/clean">Clean up firestore</a></li>
+                <li class="admin-only hidden"><a href="/admin/data/populate_world">Populate world</a></li>
+                <ul>
+                    <li>
+                        <form id="logout-form" style="display:none;">
+                            <label id="logout-form-user-email"></label>
+                            <button type="submit">Log out</button>
+                        </form>
+                    </li>
+                </ul>
             </ul>
         </nav>
         <button class="toggle-button"><i class="fas fa-chevron-up"></i></button>
@@ -38,7 +55,7 @@
         </div>
     </footer>
 
-    <script>
+    <script type = "module">
         document.addEventListener('DOMContentLoaded', function() {
             const toggleButtons = document.querySelectorAll('.toggle-button');
             const body = document.querySelector('body');
