--- a/The Book - Web/templates/the_book/home.html
+++ b/The Book - Web/templates/the_book/home.html
@@ -95,6 +95,7 @@
     import { registerListeners } from "{{ url_for('static', filename='js/the_book/server.js') }}";
     document.addEventListener('DOMContentLoaded', function() {
         registerListeners();
+        headerFooterClose();
     });
 </script>
 {% endblock %}
